--- a/app/src/main/res/layout/fragment_main.xml
+++ b/app/src/main/res/layout/fragment_main.xml
@@ -1,7 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <android.support.v4.widget.SwipeRefreshLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/swipe_refresh_layout_main"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
@@ -9,24 +8,15 @@
     <android.support.v4.widget.NestedScrollView
         android:orientation="vertical"
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:orientation="vertical">
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:id="@+id/stat_text"
-                tools:text="stat"
-                android:layout_gravity="center_horizontal"/>
+        android:layout_height="match_parent"
+        android:background="@color/white">
 
-            <android.support.v7.widget.RecyclerView
-                android:id="@+id/gridview_recent_photos"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent">
-            </android.support.v7.widget.RecyclerView>
-        </LinearLayout>
+        <android.support.v7.widget.RecyclerView
+            android:padding="@dimen/space_xtiny"
+            android:id="@+id/gridview_recent_photos"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent">
+        </android.support.v7.widget.RecyclerView>
     </android.support.v4.widget.NestedScrollView>
 
 </android.support.v4.widget.SwipeRefreshLayout>
